# BCP

./: .gitignore
First/: CMakeLists.txt  main.cpp
eighth/: CMakeLists.txt  main.cpp
fifth/: CMakeLists.txt  integrals.cpp  integrals.h  lagrangepolynom.cpp  lagrangepolynom.h  main.cpp  newtonpolynom.cpp  newtonpolynom.h
fourth/: CMakeLists.txt  integrals.cpp  integrals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
second/: CMakeLists.txt  function.cpp  function.h  main.cpp  mainwindow.cpp  mainwindow.ui
seventh/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  predatorprey.h
sixth/: CMakeLists.txt  main.cpp  ode_solver.cpp  ode_solver.h
task10/: CMakeLists.txt  main.cpp
task11/: CMakeLists.txt  main.cpp
task12/: CMakeLists.txt  main.cpp
task9/: CMakeLists.txt  main.cpp
taskFinal/: CMakeLists.txt  main.cpp  Отчет по курсовой.docx
third/: CMakeLists.txt  integrals.cpp  integrals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
